manifests/ingress/loki-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: loki
  namespace: loki-stack
spec:
  rules:
  - host: loki.monlog.ir
    http:
      paths:
      - backend:
          serviceName: loki-grafana
          servicePort: 80
        path: /
