manifests/ingress/weave-ingress-nginx.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: weave
  namespace: weave
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: scope.monlog.ir
    http:
      paths:
      - backend:
          serviceName: weave-scope-app
          servicePort: 80
        path: /
