manifests/ingress/weave-ingress-traefik.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: weave
  namespace: weave
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: scope.monlog.ir
    http:
      paths:
      - path: /
        backend:
          serviceName: weave-scope-app
          servicePort: 80
